新增頁面集

--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git 練習</title>
+    <title>學習紀錄</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-8 offset-2">
-                <div class="fs-3 fw-900">我的首頁</div>
+                <div class="fs-3 fw-bold text-center">學習紀錄</div>
             </div>
         </div>
     </div>
+    <div class="list-group">
+        <a href="./2023.02.17-1.html" target="_blank" class="list-group-item list-group-item-action text-center" aria-current="true">
+          CSS切版練習
+        </a>
+        <a href="./20230410-2.html" target="_blank" class="list-group-item list-group-item-action text-center" aria-current="true">
+            表單製作
+          </a>
+      </div>
     <link rel="stylesheet" href="./js/jquery-3.6.4.min.js">
 </body>
 </html>
