更新紀錄排版

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>學習紀錄</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/mycss.css">
 </head>
 <body>
     <div class="container">
@@ -15,14 +16,18 @@
             </div>
         </div>
     </div>
-    <div class="list-group">
-        <a href="./2023.02.17-1.html" target="_blank" class="list-group-item list-group-item-action text-center" aria-current="true">
-          CSS切版練習
-        </a>
-        <a href="./20230410-2.html" target="_blank" class="list-group-item list-group-item-action text-center" aria-current="true">
-            表單製作
-          </a>
-      </div>
+    <div class="row">
+        <div class="col-8 offset-2">
+            <div class="list-group">
+                <a href="./2023.02.17-1.html" target="_blank" class="list-group-item list-group-item-action text-center" aria-current="true">
+                  CSS切版練習
+                </a>
+                <a href="./20230410-2.html" target="_blank" class="list-group-item list-group-item-action text-center" aria-current="true">
+                    表單製作
+                  </a>
+              </div>
+        </div>
+    </div>
     <link rel="stylesheet" href="./js/jquery-3.6.4.min.js">
 </body>
 </html>
