--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
         <div class="col-8 offset-2">
             <div class="list-group">
                 <a href="./2023.02.17-1.html" target="_blank" class="list-group-item list-group-item-action text-center" aria-current="true">
-                  CSS切版練習
+                    CSS切版練習
                 </a>
                 <a href="./20230410-2.html" target="_blank" class="list-group-item list-group-item-action text-center" aria-current="true">
                     表單製作
-                  </a>
+                </a>
+                <a href="./20230421-1.html" target="_blank" class="list-group-item list-group-item-action text-center" aria-current="true">
+                    通用類別
+                </a>
               </div>
         </div>
     </div>
